--- a/hack1/frontend/index.html
+++ b/hack1/frontend/index.html
@@ -10,6 +10,7 @@
     <!-- End of TODO 1.1 -->
   </head>
   <body class="dark">
+    <header>VSCoddit</header>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
